--- a/index.html
+++ b/index.html
@@ -103,9 +103,16 @@
             <h3><a href="index.html">Home</a></h3>
             <h3><a href="posts_page.html">Posts</a></h3>
             <h3><a href="about.html">About</a></h3>
-            <script async src="https://cse.google.com/cse.js?cx=014721c0770694624">
-            </script>
-            <div class="gcse-search"></div>
+            <h3>
+                <a>
+                    <form id="search-form">
+                      <input type="text" id="search-box" placeholder="Search for posts...">
+                      <button type="submit">Search</button>
+                    </form>
+                    <div id="search-results"></div>
+                </a>
+            </h3>
+            <script src="search.js"></script>
         </div>
     </footer>
     <h4><a>The main goal of foreign exchange trading is to make profit buying a currency at a lower price and selling it at a higher price. Traders use various strategies and tools to analyze the market and make informed decisions about when to buy or sell currencies.
@@ -140,6 +147,6 @@
         </div>
       </div>
     </footer>
-
 </body>
 </html>
+
